--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Meta XP — Edição RPG",
+  "name": "Meta XP — Edição RPG (Ouro)",
   "short_name": "Meta XP",
   "start_url": ".",
   "display": "standalone",
